--- a/StoryApp/Base.lproj/Main.storyboard
+++ b/StoryApp/Base.lproj/Main.storyboard
@@ -25,7 +25,7 @@
                                 <rect key="frame" x="117" y="589" width="141" height="30"/>
                                 <state key="normal" title="Start your adventure"/>
                                 <connections>
-                                    <segue destination="LwJ-et-vgs" kind="show" id="zRJ-xA-K7l"/>
+                                    <segue destination="LwJ-et-vgs" kind="show" identifier="startAdventure" id="zRJ-xA-K7l"/>
                                 </connections>
                             </button>
                         </subviews>
@@ -46,10 +46,10 @@
             </objects>
             <point key="canvasLocation" x="994" y="793"/>
         </scene>
-        <!--View Controller-->
+        <!--PageVC-->
         <scene sceneID="WAC-dS-ipX">
             <objects>
-                <viewController id="LwJ-et-vgs" sceneMemberID="viewController">
+                <viewController id="LwJ-et-vgs" customClass="PageVC" customModule="StoryApp" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="7cO-BS-hdm">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
